--- a/appspec.yml
+++ b/appspec.yml
@@ -7,10 +7,15 @@ files:
     overwrite: yes
 
 permissions:
-  - object: /
+  - object: /home/ec2-user/app
     pattern: "**"
     owner: ec2-user
     group: ec2-user
+
+  - object: /home/ec2-user/app/scripts/deploy.sh
+    owner: ec2-user
+    group: ec2-user
+    mode: 755
 
 hooks:
   ApplicationStart: # 배포의 'ApplicationStart' 단계에서
