--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,6 @@
 spring:
   application:
-    name: kakaobook-api-demo
-  config:
-    import:
-      - "aws-parameterstore:/my-pocket/prod/db"
-      - "aws-parameterstore:/my-pocket/prod/api"
+    name: my-pocket
   datasource:
     url: jdbc:mysql://${db.host}:3306/${db.name}?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: ${db.username}
