--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
 
 kakao:
   restapi:
-    key: KakaoAK ${api.kakao}
+    key: ${api.kakao}
   api:
     baseurl: https://dapi.kakao.com
     path:
