--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,8 @@ spring:
     url: jdbc:mysql://${db.host}:3306/${db.name}?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: ${db.username}
     password: ${db.password}
+  mvc:
+    log-request-details: true
 
 kakao:
   restapi:
@@ -15,3 +17,10 @@ kakao:
     baseurl: https://dapi.kakao.com
     path:
       book: /v3/search/book
+
+logging:
+  level:
+    org.springframework.web: DEBUG
+    org.springframework.web.filter.CommonsRequestLoggingFilter: DEBUG
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n"
