--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,9 +26,9 @@ kakao:
     path:
       book: /v3/search/book
 
-logging:
-  level:
-    org.springframework.web: DEBUG
-    org.springframework.web.filter.CommonsRequestLoggingFilter: DEBUG
-  pattern:
-    console: "%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n"
+#logging:
+#  level:
+#    org.springframework.web: DEBUG
+#    org.springframework.web.filter.CommonsRequestLoggingFilter: DEBUG
+#  pattern:
+#    console: "%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n"
