--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,13 @@ spring:
         show_sql: ture
         format_sql: true
         use_sql_comments: true
+  cache:
+    type: redis
+  data:
+    redis:
+      timeout: 6000
+      host: ${redis.host}
+      port: 6379
   mvc:
     log-request-details: true
 
